--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -3,4 +3,5 @@ ARG DEBIAN_FRONTEND=noninteractive
 ENV TZ=Europe/Moscow
 RUN apt-get update && apt-get install -y curl git samtools python3 python3-pip
 RUN git clone https://github.com/DanielNaro/SAMHeaderSequencesRenamer.git
+RUN pip3 install pysam
 ENV PATH="/SAMHeaderSequencesRenamer:${PATH}"
